--- a/DZ2/ingress_canary.yaml
+++ b/DZ2/ingress_canary.yaml
@@ -15,6 +15,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: web
+            name: web-headless
             port: 
               number: 80
